--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.SvgIcon {
+ transform: scale(2.5);
+ color:wheat!important;
+ 
+}
+
+.ButtonBase {
+  margin-right: 100px;  
+ }
